# DataStructureHW1

./: .gitignore  AVLtree.h  CMakeLists.txt  DiningRoom.cpp  DiningRoom.h  DiningRoom_Tree.cpp  DiningRoom_Tree.h  Guests_Tree.cpp  Guests_Tree.h  Rooms_Tree.cpp  Rooms_Tree.h  SegmentationResort26b1.cpp  SegmentationResort26b1.h  main26b1.cpp  run_tests.py  wet1util.h
tests/: test0.in  test0.res  test10.in  test10.res  test100.in  test100.out  test110.in  test110.out  test120.in  test120.out  test130.in  test130.out  test140.in  test140.out  test150.in  test150.out  test160.in  test160.out  test170.in  test170.out  test180.in  test180.out  test190.in  test190.out  test20.in  test20.res  test200.in  test200.out  test210.in  test210.out  test220.in  test220.out  test230.in  test230.out  test240.in  test240.out  test250.in  test250.out  test260.in  test260.out  (+56 more)
